--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
-    "sass": "^1.52.2",
+    "sass": "^1.52.3",
+    "scss": "^0.2.4",
     "sequelize": "^6.3.5",
     "web-vitals": "^0.2.4"
   },
