--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.27.2",
     "express": "^4.17.1",
+    "jest-enzyme": "^7.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.4.0",
@@ -46,4 +47,5 @@
       "last 1 safari version"
     ]
   }
+
 }
